--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
  # pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=a-I8c8EAAAAJ&hl=zh-CN"
-  email            : "yachaozhang@std.xmu.edu.cn"
+  email            : yachaozhang@std.xmu.edu.cn
   # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
