--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yachao Zhang"
   avatar           : "profile.jpg"
   #bio              : "Assistant Professor, Singapore University of Technology and Design"
-  location         : "Xiamen University"
+  location         : "SIGS of Tsinghua University"
   employer         :
  # pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=a-I8c8EAAAAJ&hl=zh-CN"
