--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Miaoyu Li"
-  avatar           : "profile.jpg"
+  avatar           : "fa9426ede2e4cff666929950c95b9e3.jpg"
   #bio              : "Assistant Professor, Singapore University of Technology and Design"
   location         : "RoboSense Technology Co."
   employer         :
