--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Miaoyu Li"
-  avatar           : "IMGP1056.png"
+  avatar           : "profile.png"
   #bio              : "Assistant Professor, Singapore University of Technology and Design"
   location         : "RoboSense Technology Co."
   employer         :
