--- a/_config.yml
+++ b/_config.yml
@@ -81,13 +81,13 @@ analytics:
 # Site Author
 author:
   name             : "Miaoyu Li"
-  avatar           : "avatar(1).jpg"
+  avatar           : "profile1.jpg"
   #bio              : "Assistant Professor, Singapore University of Technology and Design"
-  location         : "RoboSense Technology Co."
+  location         : "Nanyang Technological University"
   employer         :
  # pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=tm9WjJwAAAAJ"
-  email            : limiaoyudd@163.com
+  email            : miaoyu.li@ntu.edu.sg
   # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
