--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Miaoyu Li"
-  avatar           : "profile1.jpg"
+  avatar           : "wife.jpg"
   bio              : "Nanyang Technological University"
   location         : "Singapore"
   employer         :
